@@ -1,3 +1,6 @@
+  15 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Commented out first while loop in install portion.
+
   14 Jan 2005; Preston Cody <codeman@gentoo.org>
   simple [ instead of { bug.
 
