@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.40 2005/01/15 19:39:00 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.41 2005/01/16 04:04:36 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
@@ -8,7 +8,8 @@
   USE flag editor in MakeDotConf.py. Fix double spacing issue for USE flags.
   USE flag editor now generated proper + and - USE line. CFLAGS ComboBoxes
   and Entry in MakeDotConf. CFLAGS is set in InstallProfile. MakeDotConf does
-  CHOST, ACCEPT_KEYWORDS, MAKEOPTS, and FEATURES.
+  CHOST, ACCEPT_KEYWORDS, MAKEOPTS, and FEATURES. New screen/code to actually
+  run the install.
 
   15 Jan 2005; John Laliberte <allanonl@bu.edu>
   Networking.py - added support for a custom ethernet device.
