@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.38 2005/01/15 06:30:54 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.39 2005/01/16 04:04:36 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  15 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Took out an unneeded step from CC's run()
 
   15 Jan 2005; Preston Cody	<codeman@gentoo.org>
   Attempt at detecting and adding windows partitions to lilo.
